Added links to new project page

--- a/staticfiles/projects-1.html
+++ b/staticfiles/projects-1.html
@@ -267,14 +267,14 @@
                     <div class="explore-projects-item mt-30">
                         <div class="explore-projects-thumb">
                             <img src="media\{{ i.image_uploaded }}" alt="explore-projects" style="width: 370px; height: 323px; object-fit: cover;">
-                            <a href="details/{{i.id}}"><i class="fa fa-heart"></i></a>
+                            <a href="#"><i class="fa fa-heart"></i></a>
                         </div>
                         <div class="explore-projects-content">
                             <div class="item d-flex align-items-center">
                                 <span>Design</span>
                                 <p><i class="fa fa-clock-o"></i> 20 Days Left</p>
                             </div>
-                            <a href="{% url 'single-project' %}"><h3 class="title">{{ i.projectname }}</h3></a>
+                            <a href="#"><h3 class="title">{{ i.projectname }}</h3></a>
                             <div class="projects-range">
                                 <div class="projects-range-content">
                                     <ul>
