--- a/staticfiles/single-project.html
+++ b/staticfiles/single-project.html
@@ -278,10 +278,10 @@
                                 <p>United Kingdom</p>
                             </div>
                         </div>
-                        <h3 class="title">A New Super Car on Your Wrist</h3>
+                        <h3 class="title">{{projects.projectname}}</h3>
                         <div class="project-details-item">
                             <div class="item text-center">
-                                <h5 class="title">$2203</h5>
+                                <h5 class="title">{{projects.goal}} Gwei</h5>
                                 <span>Pledged</span>
                             </div>
                             <div class="item text-center">
@@ -289,7 +289,7 @@
                                 <span>Backers</span>
                             </div>
                             <div class="item text-center">
-                                <h5 class="title">20</h5>
+                                <h5 class="title">{{ projects.deadline }}</h5>
                                 <span>Days Left</span>
                             </div>
                         </div>
@@ -303,7 +303,7 @@
                             </div>
                         </div>
                         <div class="projects-goal">
-                            <span>Goal: <span>3600.00 USD</span></span>
+                            <span>Goal: <span>{{projects.goal}} Gwei</span></span>
                         </div>
                         <div class="project-btn mt-25">
                             <a class="main-btn" href="#">Back this project</a>
@@ -363,7 +363,7 @@
                                 </div>
                             </div>
                             <div class="project-details-item">
-                                <p>Integer feugiat est in tincidunt congue. Nam eget accumsan ligula. Nunc auctor ligula a quam fermentum, non iaculis diam suscipit. Aliquam lacinia lorem vel suscipit pulvinar. Etiam condimentum nunc non ultricies hendrerit. Sed nec blandit libero, ut gravida quam. Nam tortor est, faucibus at dolor id, blandit venenatis leo. Praesent euismod tempus libero et accumsan. Nunc ultrices sit amet urna sed euismod. Pellentesque finibus ipsum non mi sodales, vel ullamcorper ipsum pharetra. Praesent nec pharetra neque.</p>
+                                <p>{{projects.projectdscp}}</p>
                                 <div class="item">
                                     <i class="flaticon-checkmark"></i>
                                     <h5 class="title">One Power Bank for Every Wrist Car</h5>
